--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=3cabb064f9120d
-MAIL_PASSWORD=6c11f289bf7688
+MAIL_USERNAME=cac5c68bb36726
+MAIL_PASSWORD=d6f9742f4390fd
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=from@example.com
 MAIL_FROM_NAME="${APP_NAME}"
